fix logout out of the screen

--- a/projects/demiurge/styles/global.scss
+++ b/projects/demiurge/styles/global.scss
@@ -41,6 +41,10 @@ fieldset:disabled .btn {
   height: 85% !important;
 }
 
+.h-67 {
+  height: 67% !important;
+}
+
 @import "./animations.scss";
 @import "./keyframes.scss";
 @import "./input.scss";
